k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msproductos-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: msproductos
  template:
    metadata:
      labels:
        app: msproductos
    spec:
      containers:
        - name: msproductos-container
          image: anthonyponte/msproductos:v2
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 9095
          volumeMounts:
            - name: h2-storage
              mountPath: /h2-data
      volumes:
        - name: h2-storage
          persistentVolumeClaim:
            claimName: h2-pvc
