k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-productos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "ms-productos.anthonyponte.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-productos-service
            port:
              number: 9095
